--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
               <p>
                 Guten Morgen! <br />
                 Im Jahr, das von Corona dominiert ist, schicken wir Euch heute auch noch die Vogelgrippe, äh sorry <a target="_blank" href="./video/day23/day23.mp4">Vogelkrippe</a> 🤪... in diesem Sinne: nie den Humor verlieren!!!  <br />
-                Wir wünschen einen entspannten letzten Arbeitstag und morgen ein schönes Fest! 💃🏿🎄🕺 <br />                
+                Wir wünschen einen entspannten letzten Arbeitstag und morgen ein schönes Fest! 💃🏿🎄🕺 <br />
               </p>
             </div>
             <div id="close">x</div>
@@ -378,7 +378,19 @@
             <div class="overlay">
               <h1>24. Dezember</h1>
               <i>-- Geri</i>
-              <p>Frohe Weihnachten!</p>
+              <p>
+                Liebes RIM,
+              </p>
+              <p>
+                2020 war eines dieser Jahre, von denen man sehr gerne Abschied nimmt. Nichtsdestotrotz war es auch ein Jahr voller Verständnis, Toleranz, Zusammenhalt und wichtigen Lektionen. Alles was wir für selbsverständlich halteten wurde uns weggenommen. Dafür werden wir in den bevorstehenden Zeiten all das viel besser schätzen - gesund zu sein, die Verwandten zu besuchen, die Mitmenschen zu umarmen, mit Freunden gemütlich essen zu gehen, ins Ausland zu verreisen oder ohne Beschränkungen einen Tag unter den besten Kollegen zu verbringen!
+              </p>
+              <p>
+                Ich wünsche Euch sehr schöne und friedliche Feiertage mit Euren Liebsten, ein besinnliches Weihnachtsfest und eine tolle Weihnachtsstimmung.<br/>
+                Und für das Jahr 2021 wünsche ich uns allen viel Gesundheit, weniger Abstand, mehr Freiheit, exotische Reisen und unsere alte Normalität.
+              </p>
+              <p>
+                Ich habe für Euch eine <a target="_blank" href="https://open.spotify.com/playlist/5YxPcmjaJrwo1ANfIoKMya?si=A5KwNMjHRj-UO0WfD-yTgA">Weihnachtsplaylist</a> zusammengestellt und hoffe Euch damit an diesem besonderen Feiertag eine tolle Weihnachtsstimmung zu verschaffen! Viel Spaß beim Zuhören und alles, alles Liebe! 🎄🕯🌟🎅❄️☃️🦌
+              </p>
             </div>
             <div id="close">x</div>
           </div>
