--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h1>1. Dezember</h1>
         <i>-- Peter</i>
         <p><i>Peter hat für uns eine großartige <a target="_blank" href="audio/day1/day1.mp4">Audionachricht</a> aufgenommen.</i></p>
-        <p>Einen schönen ersen Adventtag wünscht Euch Peter. Think positiv, test negativ.</p>
+        <p>Einen schönen ersten Adventtag wünscht Euch Peter. Think positiv, test negativ.</p>
         <p>Der Winter</p>
         <img src="./img/day1/der_winter.jpeg" alt="Der Winter" />
       </div>
@@ -82,7 +82,7 @@
       <div class="overlay">
         <h1>4. Dezember</h1>
         <i>-- Philipp M.</i>
-        <p>Unser erster "Schneemann" der startenden Wintersaisn... 😜</p>
+        <p>Unser erster "Schneemann" der startenden Wintersaison... 😜</p>
         <img src="./img/day4/snowman.jpeg" alt="snowman" />
       </div>
       <div id="close">x</div>
@@ -140,8 +140,7 @@
         <div class="overlay">
           <h1>8. Dezember</h1>
           <i>-- Patrick</i>
-          <p>Heute kommt ein wenig Vorfreude auf Schnee und Skifahren😊🗻🎿⛷️</p>
-          <p><i>Hier ist der Link zum <a target="_blank" href="video/day8/day8.mp4">Video</a>.</i></p>
+          <p>Heute kommt ein wenig <a target="_blank" href="./video/day8/day8.mp4">Vorfreude</a> auf Schnee und Skifahren😊🗻🎿⛷️</p>
         </div>
         <div id="close">x</div>
       </div>
@@ -382,7 +381,7 @@
                 Liebes RIM,
               </p>
               <p>
-                2020 war eines dieser Jahre, von denen man sehr gerne Abschied nimmt. Nichtsdestotrotz war es auch ein Jahr voller Verständnis, Toleranz, Zusammenhalt und wichtigen Lektionen. Alles was wir für selbsverständlich halteten wurde uns weggenommen. Dafür werden wir in den bevorstehenden Zeiten all das viel besser schätzen - gesund zu sein, die Verwandten zu besuchen, die Mitmenschen zu umarmen, mit Freunden gemütlich essen zu gehen, ins Ausland zu verreisen oder ohne Beschränkungen einen Tag unter den besten Kollegen zu verbringen!
+                2020 war eines dieser Jahre, von denen man sehr gerne Abschied nimmt. Nichtsdestotrotz war es auch ein Jahr voller Verständnis, Toleranz, Zusammenhalt und wichtiger Lektionen. Alles was wir für selbstverständlich hielten wurde uns weggenommen. Dafür werden wir in den bevorstehenden Zeiten all das viel besser schätzen - gesund zu sein, die Verwandten zu besuchen, die Mitmenschen zu umarmen, mit Freunden gemütlich essen zu gehen, ins Ausland zu verreisen oder ohne Beschränkungen einen Tag unter den besten Kollegen zu verbringen!
               </p>
               <p>
                 Ich wünsche Euch sehr schöne und friedliche Feiertage mit Euren Liebsten, ein besinnliches Weihnachtsfest und eine tolle Weihnachtsstimmung.<br/>
